--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Panoptes</title>
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.24/browser.min.js"></script>-->
-    <!--<script type="text/babel" src="js/test.js"></script>-->
-    
+    <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
   <body>
     <div id="content"></div>
